--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="icon.png" type="image/png">
+        <link rel="shortcut icon" href="icon.webp" type="image/webp">
         <title>WebUI</title>
         <style>
             body{
